TODOs from 2017-08-08 meeting.

--- a/modules/1-E/day1.tex
+++ b/modules/1-E/day1.tex
@@ -139,7 +139,7 @@ in the system).
   All inconsistent linear systems contain a logical \term{contradiction}.
   Find a contradiction in this system by solving for \(x_1\) in the first
   equation, substituting the resulting expression into the
-  second equation, and then simplifying.
+  second equation, and then simplifying. %TODO less handholding
   \begin{align*}
   -x_1+2x_2  &=  5 \\
   2x_1-4x_2  &=  6
@@ -193,10 +193,11 @@ in the system).
 \end{activity}
 
 \begin{remark}
-  The solution set to a consistent linear system with infinitely many solutions
-  may be described by setting
-  certain variables equal to arbitrary parameters, and expressing the
-  other variables in terms of those parameters.
+  The solution set of a consistent linear system with infinitely many solutions
+  may be described by setting each
+  certain variable equal to an arbitrary parameter, and expressing the
+  other variables in terms of those parameters. (Later we will learn
+  how to do this methodically.)
 \end{remark}
 
 \begin{activity}{10}
@@ -245,8 +246,7 @@ in the system).
 \begin{observation}
   Solving linear systems of two variables by graphing or substitution is
   reasonable for two-variable systems, but won't cut it for equations with
-  more variables. Linear Algebra provides us several tools to make this
-  process more efficient.
+  more variables. %TODO motivate coming definitions
 \end{observation}
 
 % \begin{definition}
@@ -402,8 +402,8 @@ in the system).
 
 \begin{definition}
   Two systems of linear equations (and their corresponding augmented
-  matrices) are said to be \term{equivalent} if they share exactly the
-  same solutions.
+  matrices) are said to be \term{equivalent} if they have the same
+  solution set.
 \end{definition}
 
 \begin{activity}{10}
