--- a/modules/2-V/day1.tex
+++ b/modules/2-V/day1.tex
@@ -3,6 +3,9 @@
 
 \begin{applicationActivities}{Day 1}
 
+% have students capture 8 properties of R2 from list of 11
+% include ca=b, unique equidistant, nonzero orthogonal
+
 \begin{activity}{15}
 Let \(\vect u=\begin{bmatrix} u_1 \\ u_2 \end{bmatrix}\),
 \(\vect v=\begin{bmatrix} v_1 \\ v_2 \end{bmatrix}\), and
@@ -96,7 +99,7 @@ filling in the missing information.
 
           There exists some \(\vect 0\) in \(V\)
           where \(\vect v+\vect 0=\vect v\).
-    \item \textbf{Additive identity.}
+    \item \textbf{Additive inverse.}
 
           There exists some \(-\vect v\) in \(V\)
           where \(\vect v+(-\vect v)=\vect 0\).
@@ -104,18 +107,18 @@ filling in the missing information.
 
           \(a\vect v\) belongs to
           \(V\).
-    \item \textbf{Compatible scalar multipication.}
+    \item \textbf{Associative scalar multipication.}
 
           \(a(b\vect v)=(ab)\vect v\).
+    \item \textbf{Scalar multiplication identity.}
+
+          \(1\vect v=\vect v\).
     \item \textbf{Scalar distribution.}
 
           \(a(\vect u+\vect v)=a\vect u+a\vect v\).
     \item \textbf{Vector distribution.}
 
           \((a+b)\vect v=a\vect v+b\vect v\).
-    \item \textbf{Scalar multiplication identity.}
-
-          \(1\vect v=\vect v\).
   \end{itemize}
   \end{multicols}
 \end{definition}
