--- a/modules/3-R/index.tex
+++ b/modules/3-R/index.tex
@@ -4,11 +4,8 @@
 \begin{module}{Module R: Euclidean Vector Space}
 
 \begin{moduleStandards}
-  \item \textbf{R1. Span Verification}
+  \item \textbf{R1. Spanning Euclidan Space}
         Determine if a set of Euclidean vectors spans \(\IR^n\).
-  \item \textbf{R2. Span Counterexample}
-        Find a Euclidean vector that does not belong to the span of a set
-        of Euclidean vectors.
   \item \textbf{R3. Linear Independence.}
         Determine if a set of Euclidean vectors is linearly dependent or
         independent.
