--- a/modules/1-E/readiness.tex
+++ b/modules/1-E/readiness.tex
@@ -92,16 +92,7 @@
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
 \item
-\(
-  \begin{bmatrix}
-    x_1 \\
-    x_2
-  \end{bmatrix}=
-  \begin{bmatrix}
-    -1 \\
-    3
-  \end{bmatrix}
-\)
+\(x=-1\) and \(y=3\) % TODO
 \item
 \(
   \begin{bmatrix}
