--- a/modules/2-V/day2.tex
+++ b/modules/2-V/day2.tex
@@ -12,14 +12,14 @@
     \item \(\IR^{m\times n}\): Matrices of real numbers with \(m\) rows and
           \(n\) columns.
     \item \(\IC\): Complex numbers.
-    \item \(\IP^n\): Polynomials of degree \(n\) or less.
-    \item \(\IP\): Polynomials of any degree.
+    \item \(\P^n\): Polynomials of degree \(n\) or less.
+    \item \(\P\): Polynomials of any degree.
     \item \(C(\IR)\): Real-valued continuous functions.
   \end{itemize}
 \end{remark}
 
 \begin{activity}{10}
-  Prove that \(\IP^2\) satisfies the \textit{commutative addition} property
+  Prove that \(\P^2\) satisfies the \textit{commutative addition} property
   of vector spaces,
   by showing that if \(f(x)=a_1x^2+b_1x+c_1\) and \(g(x)=a_2x^2+b_2x+c_2\),
   then \(f(x)+g(x)=g(x)+f(x)\).
@@ -84,22 +84,59 @@
     in the \(xy\) plane.
 \end{activity}
 
+% \begin{activity}{10} % Motivate with vectors first.
+%   Consider the following linear system.
+%     \begin{alignat*}{3}
+%        x_1 &\,-\,&  x_2 &\,=\,& -1 \\
+%            &\,-\,& 3x_2 &\,=\,& -6 \\
+%      -3x_1 &\,+\,& 2x_2 &\,=\,&  1
+%     \end{alignat*}
+%   \begin{subactivity}
+%     Solve this system by using a calculator to find
+%     \[\RREF
+%       \begin{bmatrix}[cc|c]
+%         1 & -1 & -1 \\
+%         0 & -3 & -6 \\
+%         -3 & 2 & 1
+%       \end{bmatrix}
+%     \]
+%   \end{subactivity}
+%   \begin{subactivity}
+%     Given this solution, does
+%     \(\begin{bmatrix}-1\\-6\\1\end{bmatrix}\) belong to
+%     \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
+%     \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\)?
+%   \end{subactivity}
+% \end{activity}
+
 \begin{activity}{10}
-  Consider the following linear system.
-    \begin{alignat*}{3}
-       x_1 &\,-\,&  x_2 &\,=\,& -1 \\
-           &\,-\,& 3x_2 &\,=\,& -6 \\
-     -3x_1 &\,+\,& 2x_2 &\,=\,&  1
-    \end{alignat*}
+  The vector
+  \(\begin{bmatrix}-1\\-6\\1\end{bmatrix}\) belongs to
+  \(\vspan\left\{\begin{bmatrix}1\\0\\-3\end{bmatrix},
+  \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\) exactly when
+  the vector equation
+  \(x_1\begin{bmatrix}1\\0\\-3\end{bmatrix}+
+  x_2\begin{bmatrix}-1\\-3\\2\end{bmatrix}
+  =\begin{bmatrix}-1\\-6\\1\end{bmatrix}\) holds for some scalars
+  \(x_1,x_2\).
   \begin{subactivity}
-    Solve this system by using a calculator to find
-    \[\RREF
-      \begin{bmatrix}[cc|c]
-        1 & -1 & -1 \\
-        0 & -3 & -6 \\
-        -3 & 2 & 1
-      \end{bmatrix}
-    \]
+    Reinterpret this vector equation as a system of linear equations.
+  \end{subactivity}
+    % \begin{alignat*}{3}
+    %    x_1 &\,-\,&  x_2 &\,=\,& -1 \\
+    %        &\,-\,& 3x_2 &\,=\,& -6 \\
+    %  -3x_1 &\,+\,& 2x_2 &\,=\,&  1
+    % \end{alignat*}
+  \begin{subactivity}
+    Solve this system. (From now on, feel free to use a calculator
+    to solve linear systems.)
+    % \[\RREF
+    %   \begin{bmatrix}[cc|c]
+    %     1 & -1 & -1 \\
+    %     0 & -3 & -6 \\
+    %     -3 & 2 & 1
+    %   \end{bmatrix}
+    % \]
   \end{subactivity}
   \begin{subactivity}
     Given this solution, does
@@ -108,6 +145,8 @@
     \begin{bmatrix}-1\\-3\\2\end{bmatrix}\right\}\)?
   \end{subactivity}
 \end{activity}
+
+%TODO add an example not belonging to span
 
 \begin{fact}
   A vector \(\vect b\) belongs to
