Final update of standards list

--- a/standards.tex
+++ b/standards.tex
@@ -36,15 +36,15 @@
 \begin{enumerate}[{$\Box\ \Box$ \bf {S}.1}]
 
 \item {\bf Linear independence}. I can determine if a set of vectors is linearly dependent or independent.
-\item {\bf Basis I}. I can determine if a set of vectors is a basis of a vector space.
-\item {\bf Basis II}.  I can compute a basis for the subspace spanned by a given set of vectors.
+\item {\bf Basis verification}. I can determine if a set of vectors is a basis of a vector space.
+\item {\bf Basis construction}.  I can compute a basis for the subspace spanned by a given set of vectors.
 \item {\bf Dimension}.  I can compute the dimension of a vector space.
 \end{enumerate}
 
 \item[How can we understand linear maps algebraically?] \hfill
 \begin{enumerate}[{$\Box\ \Box$ \bf {A}.1}]
-\item {\bf Linear maps I}.  I can write the matrix (with respect to the standard bases) corresponding to a linear transformation between Euclidean spaces.
-\item {\bf Linear maps II}. I can determine if a map between vector spaces is linear or not.
+\item {\bf Linear maps as matrices}.  I can write the matrix (with respect to the standard bases) corresponding to a linear transformation between Euclidean spaces.
+\item {\bf Linear map verification}. I can determine if a map between vector spaces is linear or not.
 \item {\bf Injectivity and surjectivity}.  I can determine if a given linear map is injective and/or surjective.
 \item {\bf Kernel and Image}. I can compute the kernel and image of a linear map, including finding bases.
 \end{enumerate}
