--- a/todo.txt
+++ b/todo.txt
@@ -5,9 +5,11 @@ Deadline: Wednesday August 15, 8:00 AM
 * Finish first day slides
 * Adapt syllabus for Steven's sections
 * Figure out how to convince Git to let Drew and Steven have different local copies of course-macros.tex, so that our local compilations are always correct.
+* Put stuff in Sakai
 
 Deadline: Monday August 21, 8:00 AM
 * Module E RAT
+* Adapt RATs to scratch cards
 
 Deadline: Wednesday August 23, 8:00 AM
 * Module E Slides
