Homogenized language of standards

--- a/modules/1-E/index.tex
+++ b/modules/1-E/index.tex
@@ -4,12 +4,11 @@
 \begin{module}{Module E: Solving Systems of Linear Equations}
 
 \begin{moduleStandards}
-  \item \textbf{E1: Augmented Matrices.}
+  \item \textbf{E1: Systems as matrices.}
         Translate back and forth between a system of linear equations and
         the corresponding augmented matrix.
-  \item \textbf{E2: Row Reduction.}
-        Find the equivalent augmented matrix in reduced row echelon form
-        for a given augmented matrix.
+  \item \textbf{E2: Row reduction.}
+        Put a matrix in reduced row echelon form
   \item \textbf{E3: Solving Linear Systems.}
         Solve a system of linear equations.
   \item \textbf{E4: Homogeneous Systems.}
