--- a/modules/2-V/index.tex
+++ b/modules/2-V/index.tex
@@ -9,11 +9,10 @@
   \item \textbf{V2: Linear Combinations.}
         Determine if a vector can be written as a linear combination of
         a given set of vectors.
-  \item \textbf{V3: Subspaces.}
-        Determine if a subset of a vector space is a subspace.
-  \item \textbf{V4: Isomorphisms.}
-        Solve an abstract vector space problem by reinterpreting it in
-        terms of an isomorphic Euclidean space.
+  \item \textbf{V3: Spanning Sets.}
+        Determine if a set of vectors spans a vector space.
+  \item \textbf{V4: Subspaces.}
+        Determine if a subset of a vector space is a subset or not.
 \end{moduleStandards}
 
 \input{modules/2-V/definitions.tex}
