--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -51,7 +51,7 @@ Before beginning this module, each student should be able to...
 \newpage
 \section*{Standards for this Module}
 
-At the end of this module, each student should be able to...
+At the end of this module, students will be able to...
 \begin{itemize}
 }{
 \end{itemize}
