--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 Deadline: Wednesday August 15, 8:00 AM 
 * Fill in homework problems
-* Make sure standard numbers/phrasing consistent across documents
+* DONE 8/11/17 Make sure standard numbers/phrasing consistent across documents 
 * Finish assessment calendar
 * Finish first day slides
 * Adapt syllabus for Steven's sections
