--- a/modules/3-R/index.tex
+++ b/modules/3-R/index.tex
@@ -1,20 +1,18 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{module}{Module R: Euclidean Vector Space}
+\begin{module}{Module S: Structure of vector spaces}
 
 \begin{moduleStandards}
-  \item \textbf{R1. Spanning Euclidan Space}
-        Determine if a set of Euclidean vectors spans \(\IR^n\).
-  \item \textbf{R3. Linear Independence.}
-        Determine if a set of Euclidean vectors is linearly dependent or
+  \item \textbf{S1. Linear independence}
+         Determine if a set of Euclidean vectors is linearly dependent or
         independent.
-  \item \textbf{R4. Basis Verification}
-        Determine if a set of Euclidean vectors is a basis for \(\IR^n\).
-  \item \textbf{R5. Basis Computation}
-        Compute a basis for a subspace of \(\IR^n\).
-  \item \textbf{R6. Dimension}
-        Compute the dimension for a subspace of \(\IR^n\).
+  \item \textbf{S2. Basis verification}
+        Determine if a set of vectors is a basis of a vector space
+  \item \textbf{S3. Basis construction}
+        Construct a basis for the subspace spanned by a given set of vectors.
+  \item \textbf{S4. Dimension}
+        I can compute the dimension of a vector space.
 \end{moduleStandards}
 
 \input{modules/3-R/definitions.tex}
