--- a/modules/4-A/index.tex
+++ b/modules/4-A/index.tex
@@ -1,9 +1,23 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\setHeader{Module A: Understanding Linear Maps Algebraically}
+\begin{module}{Module A: Algebraic properties of linear maps}
+
+\begin{moduleStandards}
+  \item \textbf{A1. Linear maps as matrices}
+         I can write the matrix (with respect to the standard bases) corresponding to a linear transformation between Euclidean spaces.
+  \item \textbf{A2. Linear map verification}
+        I can determine if a map between vector spaces is linear or not.
+  \item \textbf{A3. Injectivity and Surjectivity}
+        I can determine if a given linear map is injective and/or surjective
+  \item \textbf{A4. Kernel and Image}
+        I can compute the kernel and image of a linear map, including finding bases.
+\end{moduleStandards}
+
 
 \input{modules/4-A/readiness.tex}
 \input{modules/4-A/day1.tex}
 \input{modules/4-A/day2.tex}
 \input{modules/4-A/day3.tex}
+
+\end{module}
