--- a/modules/5-M/index.tex
+++ b/modules/5-M/index.tex
@@ -1,9 +1,21 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\setHeader{Module M: Understanding Matrices Algebraically}
+\begin{module}{Module M: Understanding Matrices Algebraically}
+
+\begin{moduleStandards}
+  \item \textbf{M1. Matrix multiplication}
+         Multiply matrices.
+  \item \textbf{M2. Invertible matrices}
+        Determine if a square matrix is invertible or not.
+  \item \textbf{M3. Matrix inverses}
+        Compute the inverse matrix of an invertible matrix.
+\end{moduleStandards}
+
 
 \input{modules/5-M/readiness.tex}
 \input{modules/5-M/day1.tex}
 \input{modules/5-M/day2.tex}
 \input{modules/5-M/day3.tex}
+
+\end{module}
