--- a/modules/6-G/index.tex
+++ b/modules/6-G/index.tex
@@ -1,9 +1,22 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\setHeader{Module G: Understanding Linear Maps Geometrically}
+\begin{module}{Module G: Geometry of Linear Maps}
+
+\begin{moduleStandards}
+  \item \textbf{G1. Determinants}
+        Compute the determinant of a square matrix.
+  \item \textbf{G2. Eigenvalues}
+        Find the eigenvalues of a square matrix, along with their algebraic multiplicities.
+  \item \textbf{G3. Eigenvectors}
+        Find the eigenspace of a square matrix associated to a given eigenvalue.
+   \item \textbf{G4. Geometric multiplicity}
+        Compute the geometric multiplicity of an eigenvalue of a square matrix.
+\end{moduleStandards}
 
 \input{modules/6-G/readiness.tex}
 \input{modules/6-G/day1.tex} % includes Day 2
 \input{modules/6-G/day3.tex}
 \input{modules/6-G/day4.tex}
+
+\end{module}
