Updated homework list

--- a/homework_problems.tex
+++ b/homework_problems.tex
@@ -9,12 +9,23 @@
 \sem
 \end{center}
 
-For each standard, I list in {\bf bold} practice problems that will most closely resemble your assessments, and in {\em italics} some additional problems that will further your understanding but are not representative of questions you will be asked on assessments.  You should not work every problem in every section; work as many as you need.
+For each standard, I list in {\bf bold} practice problems that will most closely resemble your assessments, and in {\em italics} some additional problems that will further your understanding but are not representative of questions you will be asked on assessments.  You should not work every problem in every section; work as many as you need.  These problem numbers come from the second edition of the textbook
 
 \begin{enumerate}
 \item [{\bf E1,E2,E3:} ] \S 1.2 {\bf 1-4}, {\em 11-18}, {\bf 19-32}
 \item [{\bf E4:} ]
 %TODO Fill in homeworks 
+
+\item[{\bf A1: }] \S 3.1 {\bf 13-20}, \S 9.3 {\bf 19-21}, {\em 22-30}
+\item[{\bf A2: }] \S 3.1 {\bf 13-20}, \S 9.1 {\bf 5-22}
+\item[{\bf A3: }] \S 3.1 {\bf 21-28}, \S 9.1 {\bf 27-30}, \S 9.2 {\em 1-22}
+\item[{\bf A4: }] \S 3.1 {\em 5-8}, \S 9.1 {\bf 23-26}
+\item[{\bf M1: }] \S 3.2 {\bf 1-6}, {\em 7-36}
+\item[{\bf M2,M3: }] \S 3.3 {\bf 1-16}, {\em 17-28}
+\item[{\bf G1: }] \S 5.1 {\bf 11-18}, {\em 19-40,45-52}, \S 5.2 {\em 7-18}
+\item[{\bf G2: }] \S 6.1 {\em 7-10}, {\bf 21-30}
+\item[{\bf G3: }] \S 6.1 {\em 1-6}, {\bf 11-30}
+\item[{\bf G4: }] \S 6.1 {\em 11-30}
 \end{enumerate} 
 
 \end{document}
