--- a/homework_problems.tex
+++ b/homework_problems.tex
@@ -9,12 +9,63 @@
 \sem
 \end{center}
 
-For each standard, I list in {\bf bold} practice problems that will most closely resemble your assessments, and in {\em italics} some additional problems that will further your understanding but are not representative of questions you will be asked on assessments.  You should not work every problem in every section; work as many as you need.
+\newcommand{\closeExamples}{\textbf}
+\newcommand{\otherExamples}{\textit}
+\newcommand{\standards}[1]{\item[\textbf{#1}]}
+
+For each standard, I list in \closeExamples{bold} practice problems that will most closely resemble your assessments, and in \otherExamples{italics} some additional problems that will further your understanding but are not representative of questions you will be asked on assessments.  You should not work every problem in every section; work as many as you need.
 
 \begin{enumerate}
-\item [{\bf E1,E2,E3:} ] \S 1.2 {\bf 1-4}, {\em 11-18}, {\bf 19-32}
-\item [{\bf E4:} ]
-%TODO Fill in homeworks 
-\end{enumerate} 
+  \standards{E1,E2,E3:} \S 1.2
+    \closeExamples{1-4},
+    \otherExamples{11-18},
+    \closeExamples{19-32}
+
+  \standards{E4:} \S 1.2
+    \closeExamples{20,25}
+
+  \standards{V1:} \S 7.1
+    \otherExamples{1-7},
+    \closeExamples{9-12}
+
+  \standards{V2:} \S 2.1
+    \closeExamples{31-36}
+    | \S 2.2
+    \otherExamples{1-6},
+    \closeExamples{7-12}
+    | \S 7.2
+    \closeExamples{1-16}
+
+  \standards{V3:} \S 2.2
+    \closeExamples{21-28}
+
+  \standards{V4:} \S 4.1
+    \closeExamples{1-16},
+    \otherExamples{17-20}
+    | \S 7.1
+    \closeExamples{13-16},
+    \otherExamples{18-25}
+
+  \standards{S1:} \S 2.3
+    \closeExamples{1-12},
+    \otherExamples{19-28}
+    | \S 7.2
+    \closeExamples{17-24},
+    \otherExamples{25-26}
+
+  \standards{S2:}
+    \closeExamples{\textbf{V3} and \textbf{S1} exercises}
+    | \S 4.2
+    \otherExamples{1-4},
+    \otherExamples{23-28}
+    | \S 7.3
+    \otherExamples{1-12}
+
+  \standards{S3,S4:} \S 4.2
+    \closeExamples{5-16},
+    \otherExamples{17-22}
+    | \S 7.3
+    \otherExamples{13-15,18}
+\end{enumerate}
 
 \end{document}
