--- a/course-notes.tex
+++ b/course-notes.tex
@@ -13,5 +13,9 @@
 \input{modules/5-M/index.tex} % 4 days
 \input{modules/6-G/index.tex} % 4 days
 
+%Produces PDFs of readiness materials
+\immediate\write18{readiness.bash} 
+
+
 
 \end{document}
