--- a/syllabus.tex
+++ b/syllabus.tex
@@ -13,7 +13,7 @@
 
 
 \begin{center}
-{\bf \large Math 237 \\
+{\bf \large \course{} \\
 Linear Algebra} \\
 \end{center}
 
@@ -22,7 +22,7 @@ Linear Algebra} \\
 
 \noindent \begin{tabular}{@{}lr}
 \begin{tabular}{@{}ll}
-{\bf Course information:}& Math 237--Linear Algebra \\
+{\bf Course information:}& \course{} -- Linear Algebra \\
 & Fall 2017 \\
 & Course format: Web-enhanced \\
 {\bf Meeting times:} & \ifbool{TBL}{\tbltime}{\lecturetime} \\
@@ -44,7 +44,7 @@ This course provides an introduction to linear algebra. Topics include systems o
 The textbook is {\em Linear Algebra with Applications} by Holt, second edition.  An older first edition would also be fine, although some of the homework problem numbers have changed.
 
 \section*{\fontsize{12}{15}\selectfont Learning Outcomes}
-At the completion of this course, students will 
+At the completion of this course, students will
 \begin{enumerate}[1)]
 \item Be able to solve systems of linear equations.
 \item Be able to determine whether or not a set with given operations is a vector space or a subspace of another vector space.
@@ -67,11 +67,11 @@ Attendance is required for this course, and will be tracked each day with a sign
 This class is taught by a method called {\bf team-based learning}.  Based on your responses to a survey on the first day of class, you will be assigned to a team that you will work with on various activities in class each day.  The course is divided into {\bf 6 modules}.
 \begin{itemize}
 \item Before each module begins, {\bf you will be responsible for ensuring your own readiness for the module}.  A list of learning outcomes for the readiness assurance process is available in Sakai; you should be able to do each of these things before coming to class on the first day of the module.  Due to the cumulative nature of mathematics, some of these readiness assurance outcomes are topics from previous classes, and some are topics from earlier in this class.
-\item The first day of each module will be dedicated to the {\bf Readiness Assurance Process}.  The schedule for the readiness assurance days is 
+\item The first day of each module will be dedicated to the {\bf Readiness Assurance Process}.  The schedule for the readiness assurance days is
 
 \begin{center}
 \begin{tabular}{l|l}
-Module & Date \\ \hline \hline 
+Module & Date \\ \hline \hline
 Systems of Linear Equations & \ifbool{TR}{August 22}{August 21} \\ \hline
 Vector Spaces &  \ifbool{TR}{September 5}{September 6} \\ \hline
 Structure of Vector Spaces & \ifbool{TR}{September 19}{September 20}\\ \hline
@@ -88,15 +88,15 @@ On these days, you will first take an {\bf Individual Readiness Assurance Test (
 
 \item Part of your grade will be determined by the {\bf peer evaluation} process.  At midterm and at final, you will fill out a Google Forms survey evaluating your peers and providing them feedback.  You will receive the anonymous feedback from your teammates, as well as a score that is the average of your teammates' evaluation of you.
 
-Additionally, I will give you a multiplier score based on the quality of your feedback to your peers.  This number will be 100\% for any student that makes a good faith effort to fairly evaluate their peers.  This multiplier will be multiplied by your evaluation score as determined by your teammates. 
+Additionally, I will give you a multiplier score based on the quality of your feedback to your peers.  This number will be 100\% for any student that makes a good faith effort to fairly evaluate their peers.  This multiplier will be multiplied by your evaluation score as determined by your teammates.
 
-The questions for the peer evaluation will be determined by the class on the first day. 
+The questions for the peer evaluation will be determined by the class on the first day.
 
 \item Your {\bf Class Participation Score} will be determined by a weighted average of the following four items.  The weights will be determined by the class on the first day
 
 \begin{center}
 \begin{tabular}{l|l}
-Component & Weight \\ \hline \hline 
+Component & Weight \\ \hline \hline
 iRAT & TBD \\ \hline
 tRAT & TBD\\ \hline
 Peer Evaluation & TBD \\ \hline
@@ -111,7 +111,7 @@ This score will help determine your final grade, as detailed below.
 
 \section*{\fontsize{12}{15}\selectfont Standards Based Grading}
 This course is graded by a methodology called {\bf standards based grading}.  Instead of receiving one percentage grade for an assessment, you will be assessed on whether or not you mastered individual {\bf learning standards}.  A list of these 23 standards is available in Sakai.  Your grade in the course will be based on how many of these standards you demonstrate mastery of.  {\bf On each standard, you will have the opportunity to earn up to two checkmarks; the total number of checkmarks you earn will determine your grade} (see below).
- 
+
 
 \subsection*{\fontsize{10}{12}\selectfont Feedback}
 
@@ -120,21 +120,21 @@ On a written assessment, you will not receive a score or a percentage.  There wi
 \item A {\bf M} means you successfully demonstrated {\bf Mastery} of that standard.  Great job!  Check off another box on your progress sheet.
 \item A {\bf *} means you have a minor mistake, unrelated to the standard being assessed.  For example, if you make a single arithmetic error while row reducing a matrix but do everything else correctly, you will earn a *.  If you receive a *, I won't give you any other feedback on that problem.  If you can determine your mistake on your own, and come explain it to me in my office hours and finish the problem correctly, then I will modify the * into a M.  {\bf This must be done in the week following the assessment}.  After a week, the * will be treated the same as an R.
 \item A {\bf R} means you are eligible to {\bf Reassess} in my office hours.  You will earn this mark if you made a good faith attempt and demonstrated partial understanding, but did not demonstrate full mastery of that standard on this assessment.  You should work some more practice problems, and come by my office hours if you still do not understand.  You can either wait for the next quiz, or reassess during my office hours (see ``Reassessments'' below).
-\item A {\bf N} means there was {\bf No Significant Evidence} of understanding, and you are {\bf Not Eligible} for an office hours reassessment on this standard.  Your next attempt must come on an in-class assessment.  
+\item A {\bf N} means there was {\bf No Significant Evidence} of understanding, and you are {\bf Not Eligible} for an office hours reassessment on this standard.  Your next attempt must come on an in-class assessment.
 \end{itemize}
 
 Unfortunately, this grading system is far too sophisticated for Sakai's gradebook to handle.  So you will periodically receive an automatic email from me detailing your current progress in the course.  If you have any questions about how to interpret where you stand, come to my office hours to discuss.
 
 
 \subsection*{\fontsize{10}{12}\selectfont Reassessment}
-You will have multiple opportunities to demonstrate mastery of each standard.  Your first opportunity will be on one of the daily quizzes.  
+You will have multiple opportunities to demonstrate mastery of each standard.  Your first opportunity will be on one of the daily quizzes.
 \begin{enumerate}[1)]
 \item Each standard will show up on quizzes four times, beginning the class day after it is discussed in class (except, of course, standards that we cover in late November).  Usually these four appearances will be in subsequent weeks, but this is not a strict rule.  {\bf A detailed schedule listing when exactly which day each standard appears on quizzes is posted in Sakai.}
 \item There will be a midterm in class on \ifbool{TR}{Tuesday, October 10}{Wednesday, October 11}, a semifinal assessment the last week of class, and the final exam.  The midterm will be an opportunity to demonstrate mastery on any standard from the first three modules, while the semifinal and final exam will have every standard available.
 \item Additionally, if you receive an R on a standard, you can come to my office to reassess the standard.  There are a few caveats to office hour reassessments:
 \begin{itemize}
 \item In order to reassess a standard in my office, you must have completed additional practice problems and {\bf fill out a reassessment form} (blank forms are available in Sakai).
-\item \textbf{Office hour reassessments are given at the discretion of the instructor, they are not guaranteed opportunities. } 
+\item \textbf{Office hour reassessments are given at the discretion of the instructor, they are not guaranteed opportunities. }
 \item \textbf{You can only reassess one standard per day} (or perhaps two closely related standards that can be assessed by a single problem).
 \item \textbf{There will be no office hours reassessments during the week of the midterm.}  I ask you to instead wait a few days and demonstrate mastery on the exam, so my office hour time during exam week can be devoted to answering questions helping everyone understand the new material.
 \item If you come in for help on a standard, you should come back at a later time to reassess it after you have practiced it some more on your own.  But you may certainly ask for help on one standard, and then demonstrate mastery of a different one during the same visit.
@@ -169,41 +169,41 @@ A & \begin{minipage}{0.7\textwidth}
 \item Obtain 40 mastery checkmarks;
 \item Complete 10 homework reports;
 \item \ifbool{TBL}{Have a 90\% Class Participation Score}{Have an 80\% attendence record.} \\
-\end{itemize} 
+\end{itemize}
 \end{minipage} \\
 \hline \\
 
 B & \begin{minipage}{0.7\textwidth}
-\begin{itemize}	
+\begin{itemize}
 \item Obtain 35 mastery checkmarks;
 \item Complete 8 homework reports;
 \item \ifbool{TBL}{Have a 80\% Class Participation Score}{Have an 80\% attendence record.} \\
-\end{itemize} 
+\end{itemize}
 \end{minipage} \\
 \hline \\
 
 C 	& \begin{minipage}{0.7\textwidth}
-\begin{itemize}	
+\begin{itemize}
 \item Obtain 30 mastery checkmarks;
 \item Complete 6 homework reports;
 \item \ifbool{TBL}{Have a 70\% Class Participation Score}{Have an 80\% attendence record.} \\
-\end{itemize} 
+\end{itemize}
 \end{minipage} \\
 \hline \\
 
 D 	&\begin{minipage}{0.7\textwidth}
-\begin{itemize}	
+\begin{itemize}
 \item Obtain 20 mastery checkmarks;
 \item Complete 4 homework reports;
 \item \ifbool{TBL}{Have a 50\% Class Participation Score}{Have a 50\% attendence record.} \\
-\end{itemize} 
+\end{itemize}
 \end{minipage} \\
 \hline \\
 
 F 	& \begin{minipage}{0.7\textwidth}
-\begin{itemize}	
+\begin{itemize}
 \item Not fit in the above categories. \\
-\end{itemize} 
+\end{itemize}
 \end{minipage} \\
 \hline
 \end{tabular}
@@ -225,9 +225,9 @@ The midterm and final exams can only be made up in the event of illness (with a 
 
 \section*{\fontsize{12}{15}\selectfont Calculator Policy}
 
-Calculators of any sort may be used on exams; a calculator that performs row reduction of matrices will be useful.  You will only receive credit on standards for which you show all your work, but if you have previously demonstrated mastery of a standard (e.g. row reduction) you may do that part on a calculator. 
+Calculators of any sort may be used on exams; a calculator that performs row reduction of matrices will be useful.  You will only receive credit on standards for which you show all your work, but if you have previously demonstrated mastery of a standard (e.g. row reduction) you may do that part on a calculator.
 
-\section*{\fontsize{12}{15}\selectfont Student Academic Conduct Policy} 
+\section*{\fontsize{12}{15}\selectfont Student Academic Conduct Policy}
 All students are expected to adhere to the Student Academic Conduct Policy, which you can view at
 {\tt http://www.southalabama.edu/bulletin/current/student-affairs/conduct.html}.  Students violating this policy will be penalized based on the severity of the offense in one of the following manners  1) Losing any mastery checkmarks on particular standards affected by the misconduct; 2) Reduction in final course grade by a letter grade; 3) Automatic course failure.
 
