--- a/syllabus.tex
+++ b/syllabus.tex
@@ -25,13 +25,13 @@ Linear Algebra} \\
 {\bf Course information:}& \course{} -- Linear Algebra \\
 & Fall 2017 \\
 & Course format: Web-enhanced \\
-{\bf Meeting times:} & \ifbool{TBL}{\tbltime}{\lecturetime} \\
+{\bf Meeting times:} & \classtime \\
 \end{tabular}
 \begin{tabular}{ll}
 {\bf Instructor:}& \prof \\
 & \profemail \\
 & \profoffice \\
-{\bf Office hours:} & TBD
+{\bf Office hours:} & \profhours
 \end{tabular}
 \end{tabular}
 
